# lux

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  bindings.ts  bun.lockb  components.json  deny.toml  eslint.config.js  justfile  next.config.cjs  next.config.mjs  next.config.ts  package.json  release-please-config.json  rust-toolchain.toml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/actions/setup-rust-desktop/: action.yml
.github/workflows/: appstore.yml  desktop.yml  node-build.yml  regen-bindings.yml  release.yml  site.yml  store-notes.yml  terraform.yml
app/: layout.tsx  page.tsx  providers.tsx
apps/desktop/: bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: check-tauri-versions.mjs
apps/desktop/src/: bindings.ts  globals.css  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: .env.example  .gitignore  Cargo.toml  Entitlements.mas.plist  Info.plist  endpoints.prod.json  tauri.conf.json  tauri.mas.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/ios/: project.yml.hbs
apps/desktop/src-tauri/src/: account.rs  buffer.rs  channel.rs  channels.rs  cloud.rs  cmd.rs  endpoints.rs  fixture.rs  guest.rs  lib.rs  lock.rs  main.rs  nudge.rs  remote.rs  settings.rs  setup.rs  sync.rs  tray.rs
apps/desktop/src-tauri/src/devices/: discovery.rs  enttec_open_dmx_usb.rs  mod.rs  sacn.rs
apps/desktop/src/components/: account-menu.tsx  button-row.tsx  devices-dialog.tsx  remote-indicator.tsx  settings-menu.tsx  setup-switcher.tsx  share-dialog.tsx  shared-desk.tsx  sync-indicator.tsx  view-menu.tsx
apps/desktop/src/hooks/: useAuth.ts  useBuffer.ts  useChannelsMetaData.ts  useCollapsedFixtures.ts  useDmxDevices.tsx  useFixtures.ts  useLuxRefresh.ts  useRemotePeers.ts  useSettings.ts  useSetups.ts  useSyncOnFocus.ts  useSyncStatus.ts
apps/desktop/src/lib/: actions.ts  channel-map.ts  preset-engine.test.ts  preset-engine.ts  preset-toggle.ts  query-client.ts
apps/desktop/src/routes/: __root.tsx  index.tsx  shared.tsx  universe.tsx
apps/desktop/store-notes/: 1.1.0.md  1.2.0.md  1.3.2.md  1.3.3.md
apps/node/: Cargo.toml  README.md  lux-node.service
apps/node/src/: auth.rs  config.rs  install.rs  main.rs  node.rs  pairing.rs  setups.rs
apps/site/: index.html  package.json  tsconfig.json  vite.config.ts
apps/site/privacy/: index.html
apps/site/src/: app.css  chrome.tsx  live-desk.tsx  main.tsx  privacy-main.tsx
bot/: Cargo.toml  README.md
bot/src/: buffer.rs  main.rs
components/: button-row.tsx  channel.tsx  control-grid.tsx  fixture.tsx  greeting.tsx
context-providers/: buffer-provider.tsx  channel-data-provider.tsx
crates/lux-apple-id/: Cargo.toml
crates/lux-apple-id/src/: lib.rs
crates/lux-auth/: Cargo.toml
crates/lux-auth/src/: lib.rs
crates/lux-engine/: Cargo.toml
crates/lux-engine/src/: auth.rs  ctl.rs  lib.rs  net.rs  sacn.rs  tls.rs  universe.rs
crates/lux-wire/: Cargo.toml
crates/lux-wire/src/: lib.rs
dist-isolation/: index.js
docs/: ARCHITECTURE.md  claim-code-pairing.md  shared-control.md
infra/: .gitignore  .terraform.lock.hcl  accounts.tf  apple-auth-web.tf  apple-auth.tf  apple-developer-domain-association.txt  generated.tf  imports.tf  iot.tf  nudge.tf  providers.tf  release-signing.tf  shares.tf  site.tf  store-notes.tf  terraform-ci.tf
lib/: utils.ts
out-isolation/: index.html
public/assets/: iStock-471308174(1).eps  icon.icns
scripts/: appstore-submit.ts  draft-store-notes.ts  gen-endpoints  restore-store-notes.ts
services/apple-auth/: Cargo.toml
services/apple-auth/src/: apple.rs  cognito.rs  device.rs  http.rs  main.rs  store.rs  triggers.rs  web.rs
services/bot/: Cargo.toml  README.md
services/bot/src/: main.rs
services/iot-authorizer/: Cargo.toml
services/iot-authorizer/src/: main.rs
services/sync-api/: Cargo.toml
services/sync-api/src/: auth.rs  main.rs  shares.rs  store.rs
src/: bindings.ts  global.d.ts  globals.css  main.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  Cross.toml  build.rs  lux.db  lux.db-client_wal_index  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  main.json  migrated.json  mobile.json
src-tauri/permissions/: update_channel_value.toml
src-tauri/permissions/autogenerated/: delete_channels.toml  get_initial_state.toml  insert_channel.toml  set_buffer.toml  sync_channels.toml  sync_state.toml  update_channel_metadata.toml  update_channel_value.toml
src-tauri/src/: account.rs  buffer.rs  buttons.rs  channel.rs  channels.rs  cloud.rs  cmd.rs  colors.rs  commands.rs  error.rs  fixture.rs  http.rs  interface.rs  lib.rs  logger.rs  main.rs  menu_plugin.rs  positioner.rs  remote.rs  scope.rs  setup.rs  state.rs  sync.rs  tray.rs
src-tauri/src/db/: cmd.rs  mod.rs  remote.rs
src-tauri/src/db/migrations/: m20230401_create_channels_table.rs  m20230402_create_buffer_table.rs  mod.rs
src-tauri/src/devices/: enttec_open_dmx_usb.rs  fftd2xx.rs  mod.rs
src-tauri/tests/: bindings.rs
src/app/: actions.ts  bindings.ts  buffer-state.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
src/app/control-grid/: layout.tsx  page.tsx
src/app/welcome/: layout.tsx  page.tsx
src/components/: account-menu.tsx  button-row.tsx  greeting.tsx  updater.tsx
src/components/color-picker/: color-trigger.tsx  color-utils.ts  kelvin-utils.ts  picker.tsx  rgb-utils.ts  rgba-input.tsx
src/components/control-grid/: action-menu.tsx  channel.tsx  columns.tsx  control-grid.tsx  footer.tsx  grid-caption.tsx  grid.tsx  row.tsx
src/components/fixtures/: fixture-card.tsx  fixture-color.tsx
src/components/ui/: dialog.tsx  input.tsx  table.tsx
src/hooks/: useBuffer.ts  useChannelData.ts  useChannelsMetaData.ts  useFixtures.ts  useIncomingApiRequest.ts  useLuxState.ts  usePrintChannels.ts  useSetups.ts  useTauRPC.ts  useThrottle.ts
src/lib/: color-mix.ts  utils.ts
src/routes/: __root.tsx  index.tsx  universe.tsx
sync-api/: Cargo.toml  README.md
sync-api/src/: main.rs
(+21 files in other folders)
