[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "apps/node",
    "crates/lux-apple-id",
    "crates/lux-auth",
    "crates/lux-engine",
    "crates/lux-wire",
    "services/apple-auth",
    "services/bot",
    "services/iot-authorizer",
    "services/sync-api",
]

# Shared lint policy; members opt in with `[lints] workspace = true`. Production
# code must never unwrap — a lighting app degrades and logs, it doesn't crash
# (locks recover from poisoning via lock::LockPolicy instead). The CI gate runs
# `cargo clippy --workspace` on default targets, so deny-level lints fail PRs
# while test code keeps idiomatic unwraps. `expect` stays legal: it documents an
# invariant; a naked `unwrap` doesn't.
[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
panic = "warn"
todo = "warn"
unimplemented = "warn"
# Numeric-cast hardening. This app is u8 channel values and usize buffer indices
# crossing into the u16/u32 DMX, wire, and DynamoDB types, so a silent truncation
# is a real defect. Every `as` that could lose data must become a checked
# `try_from`, an infallible `From`/`into` widening, or a locally proven `expect` —
# never an `#[allow]`. `-D warnings` in CI makes these blocking. (`cast_precision_loss`
# is deliberately not enabled yet: its only sites are i64 epoch-millis widened to
# the `f64` the TS bindings require by design, so clearing it means changing the
# timestamp representation, not the cast.)
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_possible_wrap = "warn"
cast_lossless = "warn"
# Float-equality hardening. The fixture engine mixes RGBAW as f32 (role-aware
# blending, master scaling), where `==`/`!=` on the results is a classic bug —
# rounding makes two "equal" colours compare unequal. Compare with a tolerance
# instead. Zero sites today; this keeps it that way.
float_cmp = "warn"
float_cmp_const = "warn"

# Dependencies shared across the desktop app and/or the Lambda services. Declared
# once here; members opt in with `<dep>.workspace = true` (adding features as
# needed). Bump a shared version in one place.
[workspace.dependencies]
tokio = "1.52"
# `default-https-client` is deliberately off. Every AWS client in this
# workspace is built explicitly with aws-smithy-http-client on rustls 0.23
# (ring), and the bundled default drags in hyper-rustls 0.24 -> rustls 0.21 ->
# rustls-webpki 0.101 purely for a server-side TLS acceptor type nothing here
# uses. The rest of aws-config's defaults are kept verbatim.
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "credentials-process",
    "sso",
] }
# The client every service installs in place of that default.
aws-smithy-http-client = { version = "1", features = ["rustls-ring"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
lambda_http = "1.2"
sha2 = "0.11"

# Small, optimized release binaries. Profiles must live at the workspace root, so
# this now governs the Lambda services too — lto + opt-level "s" give them smaller,
# faster-cold-start binaries, and panic = "abort" is fine for stateless handlers.
# This is Tauri's recommended smallest-binary profile (https://v2.tauri.app/concept/size);
# strip = true drops debug symbols for a smaller .dmg (no crash symbolication, fine here).
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true

# RUSTSEC-2024-0429: UB in glib's VariantStrIter::impl_get. tauri's Linux gtk
# stack pins glib 0.18 and there is no tauri release on glib 0.20, so the advisory
# can't be cleared by a version bump. Patch glib to a fork carrying the backported
# fix. The branch resolves glib's gtk-rs-core siblings from crates.io, so this
# single patch doesn't pull git *-sys crates that would duplicate the crates.io
# ones and collide on `links`. Only the desktop app pulls glib; the Lambdas are
# unaffected. Upstream PR: gtk-rs/gtk-rs-core#1991. Must be at the workspace root.
[patch.crates-io]
glib = { git = "https://github.com/johncarmack1984/gtk-rs-core", branch = "lux/glib-0.18-patch" }

# rustls-webpki 0.102.8 carries four advisories (a CRL parsing panic, two
# name-constraint acceptance issues, CRL distribution-point handling), all fixed
# in 0.103.13. rumqttc 0.25.1 — the latest release, and upstream main — pins
# `0.102.8`, so no version bump reaches it. It uses the crate in exactly one
# place, the `#[from] webpki::Error` variant on its error enum, and that type is
# unchanged across the two lines, so the fork is a one-line version bump with no
# code change. Certificate verification already ran on the 0.103.x copy that
# rustls 0.23 resolves; this removes the vulnerable one from the graph rather
# than changing any validation behaviour. Drop this entry when upstream moves.
rumqttc = { git = "https://github.com/johncarmack1984/rumqtt", branch = "lux/rumqttc-webpki-0.103" }

# specta 2.0.0-rc.26 and the 0.0.13 exporters are merged on specta main but unpublished
# (crates.io still serves rc.25 / 0.0.12), and ttipc's crates.io release exact-pins rc.25 --
# resolving it from crates.io would split the graph into two spectas. Pin all of them to
# revs until the releases land, then drop these entries (ttipc rev = its specta-rc26 branch,
# which carries main's async-injection support as of 0.1.6).
specta = { git = "https://github.com/specta-rs/specta", rev = "ef21f0544e153b944ff5d1b3afd20472afcf760c" }
specta-serde = { git = "https://github.com/specta-rs/specta", rev = "ef21f0544e153b944ff5d1b3afd20472afcf760c" }
specta-typescript = { git = "https://github.com/specta-rs/specta", rev = "ef21f0544e153b944ff5d1b3afd20472afcf760c" }
tauri-typed-ipc = { git = "https://github.com/johncarmack1984/tauri-typed-ipc", rev = "f9f4e74a38accb5a087d6ee3b72dbdc9d056a87d" }
