[package]
name = "lux-bot"
version = "0.1.0"
edition = "2021"
publish = false

# Discord Interactions endpoint on AWS Lambda (provided.al2023). Built and
# deployed with cargo-lambda; the runtime expects a `bootstrap` executable,
# which cargo-lambda produces from this binary.

[dependencies]
lambda_http = "1.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
ed25519-dalek = "2"
hex = "0.4"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-iotdataplane = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
