[package]
name = "lux"
version = "0.1.0"
description = "A DMX lighting control system for Enttec Open DMX USB devices."
authors = ["John Carmack"]
edition = "2021"
repository = "https://github.com/johncarmack1984/lux"
license = "GNU GPLv3"
readme = "../README.md"

[lib]
name = "lux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = ["isolation", "codegen"] }

[dev-dependencies]
tauri = { version = "^2.9.3", features = ["devtools", "test", "tracing"] }

[dependencies]
anyhow = "1.0.100"
array-init = "2.1.0"
dotenvy = "0.15.7"
enttecopendmx = "0.1.1"
libftd2xx = { version = "0.33.1", features = ["static"] }
log = "^0.4.28"
axum = { version = "0.8.7", features = ["tokio"] }
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = [
    "derive",
    "export",
    "function",
    "tokio",
] }
specta-typescript = { version = "0.0.9", features = ["function"] }
strum_macros = "0.27.2"
tauri = { version = "2.9.3", features = [
    "isolation",
    "image-ico",
    "image-png",
    "tray-icon",
] }
tauri-plugin-http = "2.5.4"
tauri-plugin-log = "2.7.1"
tauri-plugin-shell = "2.3.3"
taurpc = "0.5.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.18.1", features = [
    "v4",    # Lets you generate random UUIDs
    "serde", # Enable serialization/deserialization of UUIDs
] }

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
prod = ["tauri/custom-protocol"]
