[package]
name = "lux-node"
version = "0.1.0"
edition = "2021"
publish = false

# Headless lux for an always-on Linux box: holds the user-channel MQTT
# connection, applies remote-control frames addressed to one configured setup,
# and renders them to sACN — no Tauri, no webview, no GTK/glib in the binary.
# Signs in with the same Cognito account as the apps (`lux-node login`) and
# rides the same JWT-authorized channel as any other signed-in device.
# Install/runbook: apps/node/README.md.

[lints]
workspace = true

[dependencies]
lux-engine = { path = "../../crates/lux-engine" }
lux-wire = { path = "../../crates/lux-wire" }
aws-config.workspace = true
aws-sdk-cognitoidentityprovider = "1"
aws-cognito-srp = "0.2.5"
aws-smithy-http-client = { version = "1", features = ["rustls-ring"] }
gethostname = "1.1.0"
log = "^0.4.33"
env_logger = "0.11"
rpassword = "7"
rumqttc = { version = "0.25", features = ["websocket"] }
# rumqttc pulls rustls with no baked-in crypto provider; main() installs ring
# as the process default (same as the Lambda services).
rustls = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.23.4", features = ["v4"] }
