[package]
name = "lux-auth"
version = "0.1.0"
edition = "2021"
publish = false

# Server-side Cognito ID-token verification, shared by the Lambdas that gate on
# a user's identity (services/sync-api, services/iot-authorizer). The desktop
# never depends on this crate — it holds tokens, it doesn't verify them.

[lints]
workspace = true

[dependencies]
# jsonwebtoken 10 ships no crypto backend in its default features, so a build
# without one compiles but panics on the first signature verify ("Could not
# automatically determine the process-level CryptoProvider"). rust_crypto is
# the pure-Rust backend (rsa + sha2 cover our RS256) — no C, no musl-static
# linking risk on the Lambda.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { workspace = true }
serde = { workspace = true }
