[package]
# Package = binary = Lambda function name: the release deploy job builds with
# `-p <name>` and deploys the artifact at target/lambda/<name>/ to the function
# of the same name, and relies on all three lining up (as sync-api and the
# iot-authorizer already do).
name = "lux-discord-bot"
version = "0.1.0"
edition = "2021"
publish = false

# Discord Interactions endpoint on AWS Lambda (provided.al2023). Built and
# deployed with cargo-lambda; the runtime expects a `bootstrap` executable,
# which cargo-lambda produces from this binary.

[lints]
workspace = true

[dependencies]
lambda_http.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
ed25519-dalek = "2"
hex = "0.4"
aws-config.workspace = true
aws-sdk-iotdataplane = "1"
tracing.workspace = true
tracing-subscriber.workspace = true
