[package]
name = "lux-iot-authorizer"
version = "0.1.0"
edition = "2021"
publish = false

# AWS IoT custom authorizer for the user channel (change nudges + remote
# control). The app connects to IoT Core over MQTT-over-WebSocket carrying its
# Cognito ID token; IoT hands the token to this Lambda, which verifies it
# (lux-auth) and returns an IoT policy scoped to that user's own nudge topic,
# remote-control (ctl) space, and client-id prefix (lux-wire).
# Built and deployed with cargo-lambda, like the sibling services.

[lints]
workspace = true

[dependencies]
lux-auth = { path = "../../crates/lux-auth" }
lux-wire = { path = "../../crates/lux-wire" }
# Shared-control grants are read from the lux-sync table at connect time.
aws-config.workspace = true
aws-sdk-dynamodb = "1"
lambda_runtime = "1"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
# rustls with no baked-in crypto provider; main() installs ring as the process
# default before lux-auth's JWKS fetch performs any TLS (mirrors sync-api).
rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
