[package]
name = "lux-sync-api"
version = "0.1.0"
edition = "2021"
publish = false

# Cloud-sync API on AWS Lambda (provided.al2023). The lux desktop app calls this
# Function URL with a Cognito ID token to push and pull its setups; the handler
# verifies the JWT, derives the caller's `sub`, and reads/writes only that user's
# partition of the `lux-sync` DynamoDB table. Built and deployed with
# cargo-lambda; the runtime expects a `bootstrap` executable, which cargo-lambda
# produces from this binary.

[dependencies]
lambda_http.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde.workspace = true
serde_json.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb = "1"
jsonwebtoken = "10"
reqwest.workspace = true
# rustls with no baked-in crypto provider; main() installs ring as the process
# default, sidestepping the aws-lc-rs C build that reqwest's `rustls` feature pulls.
rustls.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
