[package]
name = "lux"
version = "0.9.0" # x-release-please-version
description = "A DMX lighting control system for Enttec Open DMX USB and sACN/E1.31 network nodes."
authors = ["John Carmack"]
edition = "2021"
repository = "https://github.com/johncarmack1984/lux"
license = "GNU GPLv3"
readme = "../../../README.md"

[lib]
name = "lux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = ["isolation", "codegen"] }

[dev-dependencies]
tauri = { version = "^2.9.3", features = ["devtools", "test", "tracing"] }

[dependencies]
anyhow = "1.0.100"
# Cognito accounts (sign-up / SRP sign-in / refresh) + secure refresh-token
# storage. Cognito's auth ops are unauthenticated, so the client runs with
# `.no_credentials()` — end users never need AWS keys.
aws-config.workspace = true
aws-sdk-cognitoidentityprovider = "1"
aws-cognito-srp = "0.2.5"
keyring = "4"
dotenvy = "0.15.7"
enttecopendmx = "0.1.1"
libftd2xx = { version = "0.33.1", features = ["static"] }
log = "^0.4.28"
serde_json.workspace = true
serde.workspace = true
strum = { version = "0.28.0", features = ["derive"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
strum_macros = "0.28.0"
tauri = { version = "~2.11", features = [
    "isolation",
    "image-ico",
    "image-png",
    "tray-icon",
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-shell = "2.3.3"
ttipc = { package = "tauri-typed-ipc", version = "0.1", features = ["export"] }
thiserror = "2.0.17"
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.18.1", features = [
    "v4",    # Lets you generate random UUIDs
    "serde", # Enable serialization/deserialization of UUIDs
] }
# Cloud-sync HTTP client to the lux-sync-api Function URL; shares the workspace
# reqwest (rustls-no-provider, riding the app's process-default ring provider).
reqwest.workspace = true
rumqttc = "0.25"
# rumqttc pulls rustls 0.23, which panics at runtime unless exactly one crypto
# provider feature is enabled. The workspace pins ring; add the app's extra
# features here (no cmake / aws-lc-sys C build).
rustls = { workspace = true, features = ["logging", "std", "tls12"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
prod = ["tauri/custom-protocol"]
