[package]
name = "lux"
version = "1.3.1" # x-release-please-version
description = "A DMX lighting control system for Enttec Open DMX USB and sACN/E1.31 network nodes."
authors = ["John Carmack"]
edition = "2021"
repository = "https://github.com/johncarmack1984/lux"
license = "GPL-3.0-only"
publish = false
readme = "../../../README.md"

[lib]
name = "lux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = ["isolation", "codegen"] }

[dev-dependencies]
tauri = { version = "^2.9.3", features = ["devtools", "test", "tracing"] }

[lints]
workspace = true

[dependencies]
anyhow = "1.0.103"
# Cognito accounts (sign-up / SRP sign-in / refresh) + secure refresh-token
# storage. Cognito's auth ops are unauthenticated, so the client runs with
# `.no_credentials()` — end users never need AWS keys.
aws-config.workspace = true
aws-sdk-cognitoidentityprovider = "1"
aws-cognito-srp = "0.2.5"
# Custom SDK HTTP client that trusts the bundled webpki (Mozilla) roots instead
# of the platform native store, which is unreadable on iOS. Crypto on ring to
# match the app's process-default provider (no aws-lc-sys C build).
aws-smithy-http-client = { version = "1", features = ["rustls-ring"] }
keyring = "4"
# keyring's backing crate, named directly on every platform: session entries are
# built through keyring-core types (on iOS with an access-policy modifier, see
# account::keyring_entry), and account::init_keychain registers the
# data-protection store with it at startup — keyring's own auto-registration
# skips iOS. Cargo unifies this onto the same instance keyring uses.
keyring-core = "1"
log = "^0.4.33"
serde_json.workspace = true
serde.workspace = true
strum = { version = "0.28.0", features = ["derive"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
strum_macros = "0.28.0"
tauri = { version = "~2.11", features = [
    "isolation",
    "image-ico",
    "image-png",
] }
tauri-plugin-log = "2.7.1"
tauri-plugin-shell = "2.3.5"
ttipc = { package = "tauri-typed-ipc", version = "0.1", features = ["export"] }
thiserror = "2.0.18"
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.23.4", features = [
    "v4",    # Lets you generate random UUIDs
    "serde", # Enable serialization/deserialization of UUIDs
] }
# Cloud-sync HTTP client to the lux-sync-api Function URL; shares the workspace
# reqwest (rustls-no-provider, riding the app's process-default ring provider).
reqwest.workspace = true
# The desktop↔sync-api wire contract — the same crate the Lambda serializes
# with, so the two sides cannot drift (see crates/lux-wire).
lux-engine = { path = "../../../crates/lux-engine" }
lux-wire = { path = "../../../crates/lux-wire" }
# base64url payload decode of our own Cognito ID token (topic addressing only —
# verification stays server-side in the IoT authorizer / sync-api).
base64 = "0.22"
# `websocket` for the change-nudge channel: MQTT over WebSocket to IoT Core
# (remote control keeps using native MQTT + mutual TLS below).
rumqttc = { version = "0.25", features = ["websocket"] }
# rumqttc pulls rustls 0.23, which panics at runtime unless exactly one crypto
# provider feature is enabled. The workspace pins ring; add the app's extra
# features here (no cmake / aws-lc-sys C build).
rustls = { workspace = true, features = ["logging", "std", "tls12"] }
tauri-plugin-process = "2"
gethostname = "1.1.0"

# Desktop-only outputs and integrations with no iOS/Android equivalent: USB/FTDI
# (Enttec Open DMX), the system tray, and the self-updater. Mobile drives output
# over sACN, has no tray, and updates through the App Store. Gated on real
# target_os so Cargo resolves these only when building for desktop; the matching
# code is behind `#[cfg(desktop)]`.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
enttecopendmx = "0.1.1"
libftd2xx = { version = "0.33.1", features = ["static"] }
tauri = { version = "~2.11", features = ["tray-icon"] }
tauri-plugin-updater = "2"

# keyring's Apple Keychain backend requires the data-protection Keychain API on
# iOS (the only Keychain iOS exposes); keyring's default `v1` feature enables the
# backend but not `protected`. Pull the backend crate directly on iOS with that
# feature — Cargo unifies it onto the same instance keyring uses.
[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["protected"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
prod = ["tauri/custom-protocol"]
# Mac App Store flavor (`tauri build --features mas --config src-tauri/tauri.mas.json`):
# store builds must not self-update, so this leaves the updater plugin
# unregistered. The dependency still compiles (keeps the capability set and
# feature resolution identical); registration is what's gated.
mas = []
